<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Terminus Notifier</string>
    <string name="heading_activity">Terminus Settings</string>
    <string name="heading_network">NETWORK</string>
    <string name="hint_ip">Enter IP Address</string>
    <string name="hint_port">Enter Port Number</string>
	
    <string name="button_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    
    <string name="service_status">Service Status: </string>
    <string name="network_status">Network Status: </string>
    <string name="last_event">Last Event: </string>
    
    <string name="menu_refresh">Refresh</string>
    
</resources>