<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Activity Heading -->

	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
    	
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_marginLeft="10dp"
	        android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginBottom="5dp"
	        android:text="@string/heading_activity"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />
	    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
	    
		<!-- Network Settings -->
		
		<LinearLayout
		    android:layout_height="wrap_content"
        	android:layout_width="match_parent" >
		    
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="@dimen/heading_margin_left"
		    android:layout_marginTop="@dimen/before_heading_margin"
		    android:textAppearance="?android:attr/textAppearanceMedium" 
		    android:text="@string/heading_network" />
		
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="match_parent" 
		    android:layout_height="2dp"
		    android:background="@android:color/darker_gray"
		    android:layout_marginLeft="@dimen/line_margin_sides"
		    android:layout_marginRight="@dimen/line_margin_sides" />
		
		<EditText
	        android:id="@+id/ip_address"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_ip" />
		
		<EditText
			android:id="@+id/port"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
		    android:hint="@string/hint_port" />
		
  	    </LinearLayout>
	
   <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="1.0"
            android:onClick="cancelClicked"
            android:text="Cancel" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_weight="1.0"
            android:onClick="okClicked"
            android:text="OK" />
    </LinearLayout>
	
</LinearLayout>